--- a/java/AndroidManifest.xml
+++ b/java/AndroidManifest.xml
@@ -27,7 +27,7 @@
             <meta-data android:name="android.view.im" android:resource="@xml/method" />
         </service>
 
-        <activity android:name="org.dzaima.pckeyboard.Main" android:label="Hacker's Keyboard">
+        <activity android:name="org.dzaima.pckeyboard.Main" android:label="Hacker's APL Keyboard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
